source/objects/Sisense_Recurring_Revenue__c/Sisense_Recurring_Revenue__c.object-meta.xml
<CustomObject>
    <label>Sisense Recurring Revenue</label>
    <nameField>
        <displayFormat>SiRecRev-{0000}</displayFormat>
        <label>Sisense Recurring Revenue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sisense Recurring Revenues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>