source/objects/Sisense_Recurring_Revenue__c/fields/Closing_Month__c.field-meta.xml
<CustomField>
    <fullName>Closing_Month__c</fullName>
    <label>Closing Month</label>
    <required>true</required>
    <type>Date</type>
</CustomField>